fix broken styles

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -83,6 +83,9 @@ h1,h2,h3,h4,h5 {
 
 	display: block;
 
+	a {
+		text-decoration: none;
+	}
 	i {
 		@include transition(all 0.25s ease-in-out);
 		width:100%;
@@ -102,7 +105,8 @@ h1,h2,h3,h4,h5 {
 		font-size:0.9em;
 		text-align: justify;
 	}
-	a.call-to-action {
+
+	.call-to-action {
 		@include transition(all 0.25s ease-in-out);
 		opacity: 0;
 		position: absolute;
@@ -119,7 +123,7 @@ h1,h2,h3,h4,h5 {
 		i {
 			@include transform(rotate(-5deg));
 		}
-		a.call-to-action {
+		.call-to-action {
 			opacity: 1;
 		}
 	}
